RatingManager sınıfı eklendi; uygulama içi değerlendirme isteklerini yönetmek için yeni bir yapı oluşturuldu. Kullanıcı arayüzünde değerlendirme isteği ve geri bildirim bölümleri için yerelleştirme güncellemeleri yapıldı. Onboarding sürecinde değerlendirme isteği tetiklenmesi sağlandı ve ayarlar ekranında kullanıcıların daha önce değerlendirme yapıp yapmadığını kontrol eden bir mekanizma eklendi. Ayrıca, bazı kod bölümleri temizlendi ve güncellendi.

--- a/polynap/Resources/Localizations/Common.xcstrings
+++ b/polynap/Resources/Localizations/Common.xcstrings
@@ -770,6 +770,125 @@
         }
       }
     },
+    "rating.appstore.button" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Rate on App Store"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "App Store'da Değerlendir"
+          }
+        }
+      }
+    },
+    "rating.description" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Share your experience with us!"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Deneyimini bizimle paylaş!"
+          }
+        }
+      }
+    },
+    "rating.dismiss.button" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Not Now"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Şimdi Değil"
+          }
+        }
+      }
+    },
+    "rating.feedback.button" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Send Feedback"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Geri Bildirim Gönder"
+          }
+        }
+      }
+    },
+    "rating.thankyou.description" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Your feedback is very valuable to us"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Geri bildiriminin bizim için çok değerli"
+          }
+        }
+      }
+    },
+    "rating.thankyou.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Thank You!"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Teşekkürler!"
+          }
+        }
+      }
+    },
+    "rating.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Do you like PolyNap?"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "PolyNap'i sevdin mi?"
+          }
+        }
+      }
+    },
     "tabbar.analytics" : {
       "extractionState" : "manual",
       "localizations" : {
