Tab çubuğuna Eğitim sekmesi eklendi ve ilgili yerelleştirme güncellemeleri yapıldı. Sekme dizinleri güncellenerek doğru sıralama sağlandı.

--- a/polynap/Resources/Localizations/Common.xcstrings
+++ b/polynap/Resources/Localizations/Common.xcstrings
@@ -906,6 +906,23 @@
         }
       }
     },
+    "tabbar.education" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Education"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Eğitim"
+          }
+        }
+      }
+    },
     "tabbar.history" : {
       "extractionState" : "manual",
       "localizations" : {
