Grafik düzenleme moduna yeni özellikler eklendi. Kullanıcıların uyku bloklarını sürükleyip bırakmalarını sağlayan işlevsellik geliştirildi.

--- a/polynap/Resources/Localizations/Common.xcstrings
+++ b/polynap/Resources/Localizations/Common.xcstrings
@@ -787,6 +787,23 @@
         }
       }
     },
+    "common.cancel" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cancel"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "İptal"
+          }
+        }
+      }
+    },
     "rating.description" : {
       "extractionState" : "manual",
       "localizations" : {
